Fix overflowing parts

--- a/src/app/components/todo-item/todo-item.component.css
+++ b/src/app/components/todo-item/todo-item.component.css
@@ -4,9 +4,13 @@
 
 .item {
   border: 2px solid #dddddd;
-  vertical-align: middle;
+  margin-bottom:4px;
 }
 
 .title {
   font-size: 28px;
+}
+
+.item-row {
+  width: calc(100% - 10px);
 }
